--- a/eShopSolution.AdminApp/Views/Home/Index.cshtml
+++ b/eShopSolution.AdminApp/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{ ViewData["Title"] = "Trang chủ"; }
+﻿@{
+    ViewData["Title"] = "Trang chủ";
+}
 
 <div class="container-fluid">
     <h1 class="mt-4">Bảng thống kê</h1>
