--- a/eShopSolution.AdminApp/Views/Login/Index.cshtml
+++ b/eShopSolution.AdminApp/Views/Login/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@using eShopSolution.ViewModels.System.Users
 @model LoginRequest
-@{ Layout = null; }
+@{
+    Layout = null;
+}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -71,6 +73,6 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-    <script src="~/js/scripts.js"></script>
+    <script src="/js/scripts.js"></script>
 </body>
 </html>
