--- a/eShopSolution.AdminApp/Views/User/Index.cshtml
+++ b/eShopSolution.AdminApp/Views/User/Index.cshtml
@@ -1,9 +1,16 @@
 ﻿@using eShopSolution.ViewModels.Common;
 @model PagedResult<eShopSolution.ViewModels.System.Users.UserVm>
 
-@{
-    ViewData["Title"] = "Danh sách người dùng";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+@{ ViewData["Title"] = "Danh sách người dùng";
+                Layout = "~/Views/Shared/_Layout.cshtml"; 
+    }
+
+@section Scripts{
+    <script>
+        setTimeout(function () {
+            $('#msgAlert').fadeOut('slow');
+        }, 2000);
+    </script>
 }
 <div class="container-fluid">
     <h1 class="mt-4">Danh sách người dùng</h1>
@@ -34,6 +41,12 @@
         </div>
 
         <div class="card-body">
+            @if (ViewBag.SuccessMsg != null)
+            {
+                <div id="msgAlert" class="alert alert-success" role="alert">
+                    @ViewBag.SuccessMsg
+                </div>            
+            }
             <div class="table-responsive">
                 <table class="table table-bordered">
                     <thead>
