--- a/eShopSolution.AdminApp/Views/Shared/_Layout.cshtml
+++ b/eShopSolution.AdminApp/Views/Shared/_Layout.cshtml
@@ -49,6 +49,7 @@
                                 <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne" data-parent="#sidenavAccordionPages">
                                     <nav class="sb-sidenav-menu-nested nav">
                                         <a class="nav-link" asp-controller="Product" asp-action="Index">Danh sách</a>
+                                        <a class="nav-link" asp-controller="Product" asp-action="Create">Thêm Mới</a>
                                     </nav>
                                 </div>
                                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#pagesCollapseError" aria-expanded="false" aria-controls="pagesCollapseError">
