--- a/eShopSolution.AdminApp/Views/Product/Create.cshtml
+++ b/eShopSolution.AdminApp/Views/Product/Create.cshtml
@@ -1,8 +1,20 @@
 ﻿@model eShopSolution.ViewModels.Catalog.Products.ProductCreateRequest
 
-@{
-    ViewData["Title"] = "Tạo mới sản phẩm";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+@{ ViewData["Title"] = "Tạo mới sản phẩm";
+                Layout = "~/Views/Shared/_Layout.cshtml"; }
+
+@section Scripts{
+    <script src="https://cdn.ckeditor.com/ckeditor5/21.0.0/classic/ckeditor.js"></script>
+    <script>ClassicEditor
+            .create(document.querySelector('#txt_details'), {
+                // toolbar: [ 'heading', '|', 'bold', 'italic', 'link' ]
+            })
+            .then(editor => {
+                window.editor = editor;
+            })
+            .catch(err => {
+                console.error(err.stack);
+            });</script>
 }
 
 <div class="container-fluid">
@@ -17,7 +29,7 @@
         </div>
 
         <div class="card-body">
-            <div class="col-md-4">
+            <div class="col-md-8">
                 <form asp-action="Create" enctype="multipart/form-data" method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group">
@@ -53,7 +65,7 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="SeoDescription" class="control-label"></label>
-                        <input asp-for="SeoDescription" class="form-control" />
+                        <textarea id="txt_details" asp-for="Details" rows="35" class="form-control"></textarea>
                         <span asp-validation-for="SeoDescription" class="text-danger"></span>
                     </div>
                     <div class="form-group">
